change image jenkins image to slim

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 ---
 services:
   jenkins:
-    image: eazytraining/jenkins
+    container_name: jenkins
+    image: jenkins/jenkins:slim
+    privileged: true
+    restart: always
+    user: root
     ports:
       - '8080'   # Expose uniquement le port 8080 localement
       - '50000:50000' # Port pour les agents Jenkins (JNLP)
@@ -14,19 +18,13 @@ services:
       - "traefik.http.middlewares.jenkins-headers.headers.customrequestheaders.X-Forwarded-Host=jenkins.auget-labs.space" # Pour indiquer quel domaine utiliser
       - "traefik.http.middlewares.jenkins-headers.headers.customrequestheaders.X-Forwarded-Proto=https" # Pour indiquer quel protocole utiliser
       - "traefik.http.routers.jenkins.middlewares=jenkins-headers" # Pour injecter ces en-tetes dans chaque requete.
-    privileged: true
-    restart: always
     volumes:
-      #- './jenkins_data:/bitnami'
       - '/var/run/docker.sock:/var/run/docker.sock'
       - './jenkins_home:/var/jenkins_home'
-      - './jenkins_data:/var/jenkins_data'
     networks:
       - traefik-net
 
 volumes:
-  jenkins_data:
-    driver: local
   jenkins_home:
     driver: local
 
